# kvault-wasm

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/errors/: encryption_error.rs  mod.rs  string_error.rs
src/models/: entry.rs  mod.rs  register_envelope.rs
