[package]
name = "kvault-wasm"
version = "0.1.0-alpha"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pqc_kyber = "0.7.1"
wasm-bindgen = "0.2.108"
rand = "0.8.5"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
derive_more = { version = "2.1.1", features = ["from"] }
getrandom = { version = "0.2", features = ["js"]}